--- a/internaDesarrollos.html
+++ b/internaDesarrollos.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
+
 	<title>Document</title>
 	<link rel="stylesheet" type="text/css" href="css/stylesheet.css">
 	<link rel="stylesheet" href="css/internaDesarrollo.css">
@@ -20,18 +21,25 @@
 		
 	<div class="linea_tiempo"> 
 		<div class="division_linea_tiempo">
-			<img src="img/divLineaTiempo.jpg" alt="">
-			<img src="img/divLineaTiempo.jpg" alt="">
+			<!--<img src="img/divLineaTiempo.jpg" alt=""> -->
+		</div>
+
+		<div class="img_marcador">
+			<img src="img/marcador_TL.png" alt="">
 		</div>
 		<div class="img_linea_tiempo">
 			<img src="img/lineaTiempo.jpg" alt="">
-			
 		</div>	
+		<div class="etiqueta_meses">
+			
+		</div>
+		<div class="etiqueta_years">
+			
+		</div>
 		<div class="velocidad_img">
 			<img src="img/PLAY.png" alt="">
 		</div>
 	</div>
-
     <script src="libs/threejs/three.js"></script>
     <script src="libs/threejs/js/Octree.js"></script>
     <script src="libs/threejs/js/Detector.js"></script>
@@ -44,7 +52,7 @@
     <script src="libs/threejs/loaders/ColladaLoader.js"></script>
     <script src="libs/gsap/TweenMax.min.js"></script>
     <script src="libs/gsap/CustomEase.js"></script>
-
+	
     <script src="js/xspMin-1.2.js"></script>
     <script src="js/app.js" ></script>
     <script src="js/jsonCAN.js" =""></script>
@@ -52,11 +60,12 @@
     <script src="libs/jquery/jquery-3.2.1.min.js"></script>
 
   	
-	
-  	
 
 	<script src="js/modelJSON.js"></script>
+
 	<script src="js/internaDesarrollo.js"> </script>
 	<script src="js/controllerInterna.js"></script>
+	<script src="js/arbolModelos3D.js"></script>
+
 </body>
 </html>
